--- a/wkd-server/build.gradle
+++ b/wkd-server/build.gradle
@@ -18,6 +18,9 @@ micronaut {
 }
 
 dependencies {
+    implementation(project(":wkd-api"))
+    implementation(project(":wkd-core"))
+
     kapt("io.micronaut:micronaut-http-validation")
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-runtime")
