Make com.innercirclesoftware.wkd_server the top package of the server module

--- a/wkd-server/build.gradle
+++ b/wkd-server/build.gradle
@@ -35,7 +35,7 @@ dependencies {
 
 
 application {
-    mainClass.set("com.innercirclesoftware.ApplicationKt")
+    mainClass.set("com.innercirclesoftware.wkd_server.ApplicationKt")
 }
 java {
     sourceCompatibility = JavaVersion.toVersion("11")
