--- a/wkd-core/build.gradle
+++ b/wkd-core/build.gradle
@@ -11,8 +11,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}"
     implementation "io.micronaut:micronaut-inject:3.1.4"
     implementation("org.jsoup:jsoup:1.14.3")
+
     implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.2"))
     implementation("com.squareup.okhttp3:okhttp")
+
+    api(platform("io.arrow-kt:arrow-stack:1.0.1"))
+    api("io.arrow-kt:arrow-core")
+
     kapt "io.micronaut:micronaut-inject-java:3.1.4"
 }
 
