Add info and health endpoint

--- a/wkd-server/src/main/resources/application.yml
+++ b/wkd-server/src/main/resources/application.yml
@@ -9,3 +9,12 @@ micronaut:
       swagger-ui:
         paths: classpath:META-INF/swagger/views/swagger-ui
         mapping: /swagger-ui/**
+  endpoints:
+    health:
+      enabled: true
+      sensitive: false
+      details-visible: ANONYMOUS
+    info:
+      enabled: true
+      sensitive: false
+      details-visible: ANONYMOUS
