--- a/wkd-server/build.gradle
+++ b/wkd-server/build.gradle
@@ -41,6 +41,8 @@ dependencies {
 
     implementation("io.swagger.core.v3:swagger-annotations")
     kapt("io.micronaut.openapi:micronaut-openapi:3.2.0")
+
+    implementation("io.micronaut:micronaut-management")
 }
 
 
