Ping healthchecks.io regularly and when the endpoint is hit
Ping healthcheck.io when our custom healthcheck completes/fails and when the public endpoint is hit. This is a makeshift healthcheck.

--- a/wkd-server/src/main/resources/application.yml
+++ b/wkd-server/src/main/resources/application.yml
@@ -24,3 +24,6 @@ micronaut:
     netty:
       access-logger:
         enabled: true
+healthchecksio:
+  # A ping key generated in https://healthchecks.io/
+  pingkey:
